[gd_scene load_steps=11 format=2]

[ext_resource path="res://PixelInterface/GenerateTextureRed.gdshader" type="Shader" id=1]
[ext_resource path="res://PixelInterface/GenerateTextureGreen.gdshader" type="Shader" id=2]
[ext_resource path="res://PixelInterface/GenerateTextureBlue.gdshader" type="Shader" id=3]
[ext_resource path="res://PixelInterface/GenerateTexture.gdshader" type="Shader" id=4]
[ext_resource path="res://PixelInterface/GenerateTexture.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/speed = 1.0
shader_param/color = null

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/speed = 1.0
shader_param/color = null

[node name="GenerateTexture" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="Center"]
margin_left = 110.0
margin_top = 60.0
margin_right = 914.0
margin_bottom = 540.0
script = ExtResource( 5 )

[node name="Big" type="ColorRect" parent="Center/Panel"]
material = SubResource( 4 )
margin_left = 7.0
margin_top = 7.0
margin_right = 797.0
margin_bottom = 473.0

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 797.0
margin_bottom = 473.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBox" type="HBoxContainer" parent="Center/Panel/Margin"]
margin_left = 16.0
margin_top = 16.0
margin_right = 774.0
margin_bottom = 450.0
custom_constants/separation = 16
alignment = 1

[node name="Right" type="VBoxContainer" parent="Center/Panel/Margin/HBox"]
margin_right = 434.0
margin_bottom = 434.0
alignment = 1

[node name="Top" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Right"]
margin_right = 434.0
margin_bottom = 142.0
alignment = 1

[node name="Panel" type="PanelContainer" parent="Center/Panel/Margin/HBox/Right/Top"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 142.0

[node name="Green" type="TextureRect" parent="Center/Panel/Margin/HBox/Right/Top/Panel"]
material = SubResource( 1 )
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 135.0
rect_min_size = Vector2( 128, 128 )

[node name="Middle" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Right"]
margin_top = 146.0
margin_right = 434.0
margin_bottom = 288.0
alignment = 1

[node name="Panel1" type="PanelContainer" parent="Center/Panel/Margin/HBox/Right/Middle"]
margin_right = 142.0
margin_bottom = 142.0

[node name="Red" type="TextureRect" parent="Center/Panel/Margin/HBox/Right/Middle/Panel1"]
material = SubResource( 2 )
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 135.0
rect_min_size = Vector2( 128, 128 )

[node name="Panel2" type="PanelContainer" parent="Center/Panel/Margin/HBox/Right/Middle"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 142.0

[node name="Texture" type="TextureRect" parent="Center/Panel/Margin/HBox/Right/Middle/Panel2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 135.0
rect_min_size = Vector2( 128, 128 )

[node name="Panel3" type="PanelContainer" parent="Center/Panel/Margin/HBox/Right/Middle"]
margin_left = 292.0
margin_right = 434.0
margin_bottom = 142.0

[node name="Blue" type="TextureRect" parent="Center/Panel/Margin/HBox/Right/Middle/Panel3"]
material = SubResource( 3 )
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 135.0
rect_min_size = Vector2( 128, 128 )

[node name="Bottom" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Right"]
margin_top = 292.0
margin_right = 434.0
margin_bottom = 434.0
alignment = 1

[node name="Panel" type="PanelContainer" parent="Center/Panel/Margin/HBox/Right/Bottom"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 142.0

[node name="Preview" type="ColorRect" parent="Center/Panel/Margin/HBox/Right/Bottom/Panel"]
material = SubResource( 5 )
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 135.0
rect_min_size = Vector2( 128, 128 )

[node name="Left" type="VBoxContainer" parent="Center/Panel/Margin/HBox"]
margin_left = 450.0
margin_right = 758.0
margin_bottom = 434.0
custom_constants/separation = 16
alignment = 1

[node name="Settings" type="VBoxContainer" parent="Center/Panel/Margin/HBox/Left"]
margin_top = 87.0
margin_right = 308.0
margin_bottom = 299.0
alignment = 1

[node name="Color" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left/Settings"]
margin_right = 308.0
margin_bottom = 32.0
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/HBox/Left/Settings/Color"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Color"

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/HBox/Left/Settings/Color"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="ColorPicker" type="ColorPickerButton" parent="Center/Panel/Margin/HBox/Left/Settings/Color"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="Seed" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left/Settings"]
margin_top = 36.0
margin_right = 308.0
margin_bottom = 68.0
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/HBox/Left/Settings/Seed"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Seed"

[node name="SpinBox" type="SpinBox" parent="Center/Panel/Margin/HBox/Left/Settings/Seed"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/HBox/Left/Settings/Seed"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
max_value = 2e+08

[node name="Octaves" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left/Settings"]
margin_top = 72.0
margin_right = 308.0
margin_bottom = 104.0
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/HBox/Left/Settings/Octaves"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Octaves"

[node name="SpinBox" type="SpinBox" parent="Center/Panel/Margin/HBox/Left/Settings/Octaves"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/HBox/Left/Settings/Octaves"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
min_value = 1.0
max_value = 9.0
value = 1.0

[node name="Period" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left/Settings"]
margin_top = 108.0
margin_right = 308.0
margin_bottom = 140.0
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/HBox/Left/Settings/Period"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Period"

[node name="SpinBox" type="SpinBox" parent="Center/Panel/Margin/HBox/Left/Settings/Period"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/HBox/Left/Settings/Period"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
min_value = 0.1
max_value = 256.0
step = 0.1
value = 0.1

[node name="Persistence" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left/Settings"]
margin_top = 144.0
margin_right = 308.0
margin_bottom = 176.0
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/HBox/Left/Settings/Persistence"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Persistence"

[node name="SpinBox" type="SpinBox" parent="Center/Panel/Margin/HBox/Left/Settings/Persistence"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/HBox/Left/Settings/Persistence"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
max_value = 1.0
step = 0.001

[node name="Lacunarity" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left/Settings"]
margin_top = 180.0
margin_right = 308.0
margin_bottom = 212.0
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/HBox/Left/Settings/Lacunarity"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
text = "Lacunarity"

[node name="SpinBox" type="SpinBox" parent="Center/Panel/Margin/HBox/Left/Settings/Lacunarity"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/HBox/Left/Settings/Lacunarity"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 32 )
min_value = 0.1
max_value = 4.0
step = 0.01
value = 0.1

[node name="Buttons" type="HBoxContainer" parent="Center/Panel/Margin/HBox/Left"]
margin_top = 315.0
margin_right = 308.0
margin_bottom = 347.0
alignment = 1

[node name="Generate" type="Button" parent="Center/Panel/Margin/HBox/Left/Buttons"]
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Generate"

[node name="Reset" type="Button" parent="Center/Panel/Margin/HBox/Left/Buttons"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset"

[node name="Save" type="Button" parent="Center/Panel/Margin/HBox/Left/Buttons"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"
